IMP: hover style

--- a/Magento_Theme/templates/html/header/menu/desktop.phtml
+++ b/Magento_Theme/templates/html/header/menu/desktop.phtml
@@ -42,13 +42,13 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
         >
             <ul class="flex justify-start flex-wrap gap-x-7 py-4">
                 <?php foreach ($menuItems as $index => $menuItem): ?>
-                    <li class="relative level-0"
+                    <li class="relative level-0 border-b-2 border-transparent hover:border-primary data-[active]:border-primary"
                         @mouseenter="hoverPanelActiveId = '<?= /* @noEscape */ (string) $index ?>'"
                         @mouseleave="hoverPanelActiveId = 0"
                         @keyup.escape="hoverPanelActiveId = 0"
                     >
                         <span class="flex items-center text-md">
-                            <a class="w-full text-base text-gray-700 hover:underline level-0 py-2 px-0.5"
+                            <a class="w-full text-base text-gray-700 level-0 py-2 px-0.5"
                                href="<?= $escaper->escapeUrl($menuItem['url']) ?>"
                                title="<?= $escaper->escapeHtmlAttr($menuItem['name']) ?>"
                                @focus="hoverPanelActiveId = 0"
@@ -61,7 +61,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                                     data-sr-button-id="<?= $escaper->escapeHtmlAttr($index) ?>"
                                     :aria-expanded="hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>' ? 'true' : 'false'"
                                     @click="openMenuOnClick('<?= /* @noEscape */ (string) $index ?>')"
-                                    class="rounded p-1"
+                                    class="rounded p-1 text-gray-500"
                                 >
                                     <?= $heroiconsSolid->chevronDownHtml("flex self-center h-5 w-5", 25, 25, ['aria-hidden' => 'true']) ?>
                                     <span class="sr-only">
@@ -72,7 +72,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                         </span>
                         <?php if (!empty($menuItem['childData'])): ?>
                             <ul
-                                class="absolute z-10 hidden px-6 py-4 -ml-6 shadow-lg bg-container-lighter/95"
+                                class="absolute top-full z-10 hidden px-6 py-4 mt-0.5 -ml-6 shadow-lg bg-container-lighter/95"
                                 :class="{
                                     'hidden' : hoverPanelActiveId !== '<?= /* @noEscape */ (string) $index ?>',
                                     'block' : hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>'
@@ -82,7 +82,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                                     <li>
                                         <a href="<?= $escaper->escapeUrl($subMenuItem['url']) ?>"
                                            title="<?= $escaper->escapeHtmlAttr($subMenuItem['name']) ?>"
-                                           class="block w-full px-3 py-1 my-1 whitespace-nowrap first:mt-0 hover:underline"
+                                           class="block w-full px-3 py-1 my-1 whitespace-nowrap first:mt-0 hover:underline aria-[current=page]:underline"
                                            @keyup.escape="$nextTick(() => document.querySelector('[data-sr-button-id=<?= $escaper->escapeJs($index) ?>]').focus())"
                                         >
                                             <span class="text-base text-gray-700">
