--- a/Magento_Checkout/templates/php-cart/shipping.phtml
+++ b/Magento_Checkout/templates/php-cart/shipping.phtml
@@ -28,7 +28,6 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
             cartIsVirtual: <?= (int) $block->getQuote()->isVirtual() ?>,
             customer: false,
             availableShippingMethods: [],
-            dispatch: null,
             isLoading: false,
             cartData: {
                 address: {
@@ -50,7 +49,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
             },
             directoryData: false,
             shippingMethod: false,
-            init($dispatch){
+            init() {
                 const selectedShippingMethod = window.checkoutConfig.selectedShippingMethod;
                 if (selectedShippingMethod) {
                     this.shippingMethod = `${selectedShippingMethod.carrier_code}_${selectedShippingMethod.method_code}`
@@ -59,8 +58,6 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                 this.showEstimateShipping = JSON.parse(
                     hyva.getBrowserStorage().getItem('hyva.showEstimateShipping')
                 );
-
-                this.dispatch = $dispatch;
             },
             toggleEstimateShipping() {
                 this.showEstimateShipping = !this.showEstimateShipping;
@@ -78,7 +75,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                     this.abortShippingController.abort();
                 }
                 this.isLoading = true;
-                this.dispatch('update-shipping-method-start', {});
+                this.$dispatch('update-shipping-method-start', {});
 
                 const path = this.customer && this.customer.fullname
                     ? '/V1/carts/mine/estimate-shipping-methods'
@@ -103,13 +100,13 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                         this.availableShippingMethods = result;
 
                         if(!this.availableShippingMethods.find(method => { return method.carrier_code + '_' + method.method_code === this.shippingMethod})) {
-                            this.dispatch('update-shipping-method', {method: false});
+                            this.$dispatch('update-shipping-method', {method: false});
                             this.shippingMethod = false;
                         }
                     })
                     .catch(this.displayError)
                     .finally(() => {
-                            this.dispatch('update-shipping-method-end', {});
+                            this.$dispatch('update-shipping-method-end', {});
                             this.fetchTotals();
                             this.isLoading = false;
                         }
@@ -122,7 +119,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                 return this.availableShippingMethods.filter(rate => rate.carrier_title === carrierTitle);
             },
             updateShippingMethod() {
-                this.dispatch('update-shipping-method', {method: this.shippingMethod});
+                this.$dispatch('update-shipping-method', {method: this.shippingMethod});
                 this.fetchTotals();
             },
             abortTotalsController: null,
@@ -130,7 +127,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                 if (this.abortTotalsController) {
                     this.abortTotalsController.abort();
                 }
-                this.dispatch('update-totals-start', {});
+                this.$dispatch('update-totals-start', {});
 
                 let carrierCode = null;
                 let methodCode = null;
@@ -176,11 +173,11 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                         return result;
                     })
                     .then(result => {
-                        this.dispatch('update-totals', {data: result});
+                        this.$dispatch('update-totals', {data: result});
                     })
                     .catch(this.displayError)
                     .finally(() => {
-                            this.dispatch('update-totals-end', {});
+                            this.$dispatch('update-totals-end', {});
                         }
                     );
             },
@@ -331,9 +328,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                 return this.cartData.address && this.cartData.address.countryId && this.getAvailableRegions().length
             },
             displayError(error) {
-                if (error.name === 'AbortError') {
-                    console.log('Fetch aborted');
-                } else {
+                if (error.name !== 'AbortError') {
                     console.error(error);
                     typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                         [{
@@ -349,7 +344,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
 <div id="block-shipping"
      class="flex flex-col pb-2 my-2 border-b-2 border-gray-300 estimate-shipping-form"
      x-data="initShippingEstimation()"
-     x-init="init($dispatch)"
+     x-init=""
      @private-content-loaded.window="receiveCustomerData($event.detail.data)"
 >
     <h3 class="title" id="block-shipping-title">
@@ -485,12 +480,17 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                                                :value="rate.carrier_code + '_' + rate.method_code"
                                                x-model="shippingMethod"
                                                @change="updateShippingMethod()"/>
-                                        <div class="grid grid-cols-2 w-full">
-                                            <span x-text="rate.method_title"></span>
-                                            <?php if ($totalsOutput->displayCartShippingExclTax() || $totalsOutput->displayCartShippingBoth()): ?>
-                                            <span x-text="hyva.formatPrice(rate.price_excl_tax)"></span>
-                                            <?php elseif ($totalsOutput->displayCartShippingInclTax() || $totalsOutput->displayCartShippingBoth()): ?>
-                                            <span x-text="hyva.formatPrice(rate.price_incl_tax)"></span>
+                                        <span x-text="rate.method_title"></span>
+                                        <div class="flex flex-col justify-end ml-auto">
+                                            <?php if ($totalsOutput->displayCartShippingExclTax()): ?>
+                                                <span x-text="`${hyva.formatPrice(rate.price_excl_tax)}`" class="price-excluding-tax"></span>
+                                            <?php elseif ($totalsOutput->displayCartShippingInclTax()): ?>
+                                                <span x-text="`${hyva.formatPrice(rate.price_incl_tax)}`" class="price-including-tax"></span>
+                                            <?php else: ?>
+                                                <span x-text="`${hyva.formatPrice(rate.price_excl_tax)} <?= $escaper->escapeJs(__('Excl. Tax')) ?>`" class="price-excluding-tax"></span>
+                                                <template x-if="rate.price_excl_tax !== rate.price_incl_tax">
+                                                    <span x-text="`${hyva.formatPrice(rate.price_incl_tax)} <?= $escaper->escapeJs(__('Incl. Tax')) ?>`" class="price-including-tax"></span>
+                                                </template>
                                             <?php endif; ?>
                                         </div>
                                     </label>
