--- a/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
@@ -29,10 +29,22 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                 w-20 order-1 col-span-1 sm:col-span-2 md:col-span-1 lg:col-span-2"
             aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode')) ?>"
         >
+            <style>
+                .modes {
+                    --icon-modes-grid: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" /></svg>');
+                    --icon-modes-list: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 10h16M4 14h16M4 18h16" /></svg>');
+                }
+            </style>
             <?php foreach ($block->getModes() as $code => $label): ?>
                 <button
                     type="button"
-                    class="modes-mode mode-<?= $escaper->escapeHtmlAttr(strtolower($code)) ?> <?= ($block->isModeActive($code)) ? 'active' : 'opacity-50 hover:opacity-100' ?>"
+                    class="modes-mode w-6 h-6 mode-<?= $escaper->escapeHtmlAttr(strtolower($code)) ?> <?= ($block->isModeActive($code)) ? 'active' : 'opacity-50 hover:opacity-100' ?>"
+                    <?php if (strtolower($code) === "grid"): ?>
+                        style="background-image: var(--icon-modes-grid)"
+                    <?php endif; ?>
+                    <?php if (strtolower($code) === "list"): ?>
+                        style="background-image: var(--icon-modes-list)"
+                    <?php endif; ?>
                     title="<?= $escaper->escapeHtmlAttr($label) ?>"
                     <?php if ($block->isModeActive($code)): ?>
                         disabled
@@ -46,13 +58,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                     data-role="mode-switcher"
                     data-value="<?= $escaper->escapeHtmlAttr(strtolower($code)) ?>"
                     aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode - %1', $label)) ?>"
-                >
-                    <?php if (strtolower($code) === "grid"): ?>
-                        <?= $heroicons->viewGridHtml('', 24, 24, ['aria-hidden' => 'true']); ?>
-                    <?php else: ?>
-                        <?= $heroicons->viewListHtml('', 24, 24, ['aria-hidden' => 'true']); ?>
-                    <?php endif; ?>
-                </button>
+                ></button>
             <?php endforeach; ?>
         </nav>
     <?php else: ?>
