--- a/Magento_Bundle/templates/catalog/product/view/price.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/price.phtml
@@ -99,7 +99,7 @@ $displayTax = $productPriceViewModel->displayPriceIncludingTax();
                     return this.initialTierPrices.reduce((currentValue, tierPrice) => {
                         if (this.qty >= tierPrice.price_qty) {
                             const discount = price * (tierPrice.percentage_value / 100);
-                            return price - discount;
+                            return (price - discount <  currentValue) ? (price - discount) : currentValue;
                         }
                         return currentValue;
                     }, price);
