--- a/Hyva_Theme/templates/ui/loading.phtml
+++ b/Hyva_Theme/templates/ui/loading.phtml
@@ -18,8 +18,7 @@ use Magento\Framework\Escaper;
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
-<div class="flex flex-row justify-center items-center w-full h-full fixed select-none z-50"
-     style="left: 50%;top: 50%;transform: translateX(-50%) translateY(-50%);background: rgba(255,255,255,0.7);"
+<div class="z-50 fixed inset-0 grid place-items-center bg-white/70 text-primary"
      x-show="isLoading"
      x-cloak
      x-transition:enter="ease-out duration-200"
@@ -28,8 +27,12 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
      x-transition:leave="ease-in duration-200"
      x-transition:leave-start="opacity-100"
      x-transition:leave-end="opacity-0">
-    <?= $hyvaicons->loaderHtml('text-primary', 57, 57); ?>
-    <div class="ml-10 text-primary text-xl">
-        <?= $escaper->escapeHtml(__('Loading...')) ?>
+    <div class="flex gap-10 items-center p-4">
+        <?= $hyvaicons->loaderHtml('text-primary', 57, 57); ?>
+        <div class="ml-10 text-primary text-xl">
+            <?= $escaper->escapeHtml(__('Loading...')) ?>
+        </div>
+    </div>
+</div>
     </div>
 </div>
