ADD: x-cloak from #984

--- a/Hyva_Theme/templates/ui/loading.phtml
+++ b/Hyva_Theme/templates/ui/loading.phtml
@@ -20,6 +20,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 <div
     class="z-50 fixed inset-0 grid place-items-center bg-white/70 text-primary"
+    x-cloak
     x-show="isLoading"
     x-transition.opacity.duration.200ms
 >
