--- a/web/tailwind/components/print.css
+++ b/web/tailwind/components/print.css
@@ -1,4 +1,8 @@
 @media print {
+    * {
+        box-shadow: none !important;
+    }
+
     :is(h1, h2, h3, h4, h5, h6) {
         page-break-after: avoid;
     }
