--- a/Magento_Theme/templates/html/header/search-form.phtml
+++ b/Magento_Theme/templates/html/header/search-form.phtml
@@ -8,6 +8,8 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 use Magento\Search\Helper\Data as SearchHelper;
@@ -18,6 +20,10 @@ use Magento\Search\Helper\Data as SearchHelper;
 /** @var Escaper $escaper */
 /** @var Template $block */
 /** @var SearchHelper $helper */
+/** @var ViewModelRegistry $viewModels */
+
+/** @var HeroiconsOutline $heroicons */
+$heroicons = $viewModels->require(HeroiconsOutline::class);
 
 $helper = $this->helper(SearchHelper::class);
 ?>
@@ -106,11 +112,11 @@ $helper = $this->helper(SearchHelper::class);
             >
             <button
                 type="submit"
-                class="action search"
+                class="btn btn-primary rounded-l-none shrink-0 p-3 action search"
                 title="<?= $escaper->escapeHtml(__('Search')) ?>"
                 aria-label="<?= $escaper->escapeHtml(__('Search')) ?>"
             >
-                <?= $escaper->escapeHtml(__('Search')) ?>
+                <?= $heroicons->searchHtml('', 20, 20, ['aria-hidden' => 'true']); ?>
             </button>
         </div>
         <template x-if="suggestions.length > 0">
