ADD: init logic for x-defer

--- a/Magento_Cookie/templates/notices.phtml
+++ b/Magento_Cookie/templates/notices.phtml
@@ -53,7 +53,12 @@ if ($cookieHelper->isCookieRestrictionModeEnabled()): ?>
             cookieValue: '<?= /* @noEscape */ $cookieHelper->getAcceptedSaveCookiesWebsiteIds() ?>',
             cookieLifetime: '<?= /* @noEscape */ $cookieHelper->getCookieRestrictionLifetime() ?>',
             noCookiesUrl: '<?= $escaper->escapeJs($block->getUrl('cookie/index/noCookies')) ?>',
-
+            init() {
+                window.addEventListener('private-content-loaded', () => {
+                    this.checkAcceptCookies()
+                }, { once: true });
+                window.dispatchEvent(new CustomEvent('reload-customer-section-data'));
+            },
             checkAcceptCookies() {
                 this.showCookieBanner = ! isAllowedSaveCookie();
             },
@@ -74,7 +79,6 @@ if ($cookieHelper->isCookieRestrictionModeEnabled()): ?>
          aria-label="<?= $escaper->escapeHtmlAttr(__('We use cookies to make your experience better.')) ?>"
          x-data="initCookieBanner()"
          x-defer="intersect"
-         @private-content-loaded.window="checkAcceptCookies()"
 >
     <template x-if="showCookieBanner">
         <div role="dialog"
