--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -174,7 +174,8 @@ mutation createProductReviewMutation(
                                 <input class="form-input mt-3 block w-full text-sm"
                                        required
                                        placeholder="<?= $escaper->escapeHtmlAttr(__('Nickname') . '*') ?>" type="text"
-                                       name="nickname" id="nickname_field"/>
+                                       name="nickname" id="nickname_field"
+                                       autocomplete="nickname"/>
                             </div>
                         </div>
                         <div>
@@ -186,7 +187,8 @@ mutation createProductReviewMutation(
                                        required
                                        placeholder="<?= $escaper->escapeHtml(__('Summary') . '*') ?>" type="text"
                                        name="title"
-                                       id="summary_field"/>
+                                       id="summary_field"
+                                       autocomplete="off"/>
                             </div>
                         </div>
                         <div>
@@ -198,7 +200,7 @@ mutation createProductReviewMutation(
                                       required
                                       placeholder="<?= $escaper->escapeHtml(__('Review') . '*') ?>" name="detail"
                                       id="review_field" cols="5"
-                                      rows="3"></textarea>
+                                      rows="3" autocomplete="off"></textarea>
                             </div>
                         </div>
                     </div>
